--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <div id="global-container">
-        <div class="hd-ft-container">
+        <div class="hd-ft-container mb-lg">
             <header class="header">
                 <div class="hd-mask">
                     <h2 class="hd-title"><span class="title-big">テレワーク<br>オンライン授業</span></h2>
@@ -33,7 +33,7 @@
                 </div>
             </header>
         </div>
-        <div class="hd-ft-container">
+        <div class="hd-ft-container mb-lg">
             <div class="target-bg">
                 <div class="target-box">
                     <p class="target-text ft-lg"><i class="fa fa-check-circle" aria-hidden="true"></i> 会社でテレワークを始めたがzoomの始め方わからない。同僚に聞くのもちょっと…</p>
@@ -66,7 +66,7 @@
                 </div>
             </div>
         </div>
-        <div class="hd-ft-container bg-blue">
+        <div class="hd-ft-container">
             <div class="target-bg">
                 <div class="target-box mb-lg">
                     <h2 class="banner-title">とにかく設定が不安・わからない！！</h2>
@@ -80,7 +80,7 @@
                 <div class="shop-menu-box">
                     <h2 class="title bg-blue">店頭メニュー</h2>
                     <div class="shop-menu mb-sm">
-                        <h3 class="shop-menu-title">初期設定パック (マイクロソフトアカウント設定・Office設定込)</h3>
+                        <h3 class="shop-menu-title">初期設定パック <span class="ft-sm">(マイクロソフトアカウント設定・Office設定込)</span></h3>
                         <table class="tbl-r04">
                         <tr class="thead">
                             <th></th>
